--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -3,8 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.crucial.a2019_alc_notekeeper.NoteActivity">
     <item
-        android:id="@+id/action_send_mail"
+        android:id="@+id/action_cancel"
         android:orderInCategory="100"
+        android:title="Cancel" />
+    <item
+        android:id="@+id/action_send_mail"
+        android:orderInCategory="101"
         android:title="Send As Email"
         app:showAsAction="never" />
 </menu>
