--- a/app/src/main/res/layout/content_note.xml
+++ b/app/src/main/res/layout/content_note.xml
@@ -28,6 +28,7 @@
         android:gravity="start|top"
         android:hint="@string/note_title"
         android:inputType="textMultiLine"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
         app:layout_constraintStart_toStartOf="@+id/spinner_courses"
         app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />
