--- a/app/src/main/res/layout/content_note_list.xml
+++ b/app/src/main/res/layout/content_note_list.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        tools:listitem="@layout/item_note_list"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
