--- a/app/src/main/res/layout/item_note_list.xml
+++ b/app/src/main/res/layout/item_note_list.xml
@@ -8,10 +8,11 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="#F0F0F0"
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true"
-        app:contentPadding="16dp" >
+        app:contentPadding="16dp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
