--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -4,8 +4,16 @@
     tools:context="com.crucial.a2019_alc_notekeeper.NoteActivity">
     <item
         android:id="@+id/action_cancel"
+        android:icon="@android:drawable/ic_menu_revert"
         android:orderInCategory="100"
-        android:title="Cancel" />
+        android:title="Cancel"
+        android:visible="true"
+        app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/action_next"
+        android:icon="@android:drawable/ic_media_next"
+        android:title="Next"
+        app:showAsAction="ifRoom|withText" />
     <item
         android:id="@+id/action_send_mail"
         android:orderInCategory="101"
