--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -14,21 +14,32 @@
   ~ limitations under the License.
   -->
 
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/messages_header">
+    <PreferenceCategory app:title="General">
 
         <EditTextPreference
-            app:key="signature"
-            app:title="@string/signature_title"
+            android:defaultValue="Your Name"
+            android:title="Display Name"
+            app:key="user_display_name"
+            app:title="Display Name"
             app:useSimpleSummaryProvider="true" />
 
+        <EditTextPreference
+            app:useSimpleSummaryProvider="true"
+            android:defaultValue="yourname@yourhost.com"
+            android:key="user_email_address"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
+            android:title="Email Address" />
         <ListPreference
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:key="reply"
-            app:title="@string/reply_title"
+            android:entryValues="@array/pref_values_favorite_social"
+            android:summary='"%s"'
+            app:defaultValue="@string/pref_default_favorite_social"
+            app:entries="@array/pref_entries_favorite_social"
+            app:key="user_social"
+            app:title="Favorite Social Network"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
